# ggrid

./: .env  .gitattributes  .gitignore  Dockerfile  PLAN.md  README.md  package.json
agent/: index.ts  package.json
onchain/: .gitignore  Anchor.toml  MAINNET.md  README.md  package-lock.json  package.json
onchain/.cargo/: config.toml
onchain/programs/ggrid_payout/: Cargo.toml
onchain/programs/ggrid_payout/src/: lib.rs
onchain/programs/ggrid_stake/: Cargo.toml
onchain/programs/ggrid_stake/src/: lib.rs
onchain/scripts/: close-devnet.sh  create-token.ts  import-key.cjs  initialize.ts  launch-mainnet.sh  package.json  reclaim-mainnet.sh  recover.sh  recover.ts  run-devnet.sh  settle.ts
onchain/tests/: ggrid_payout.ts  run.cjs
provider/: README.md  connect.bat  install.ps1  install.sh
server/: README.md  package.json  tsconfig.json
server/src/: app.ts  auth.ts  cache.ts  canary.ts  config.ts  db.ts  deposits.ts  geo.ts  index.ts  ledger.ts  payouts.ts  pricing.ts  privy.ts  probe.ts  proxy.ts  queue.ts  ratelimit.ts  registry.ts  retention.ts  runpod.ts  sandbox.ts  solana.ts  spotcheck.ts  stake.ts  types.ts  verify.ts
server/src/routes/: api.ts  nodes.ts  v1.ts
server/test/: e2e.ts  mock-node.ts
web/: index.html  package.json  vite.config.ts
web/public/: install.ps1  install.sh
web/src/: App.tsx  Bubbles.tsx  ConsoleRoot.tsx  Dashboard.tsx  Ocean.tsx  Pages.tsx  Playground.tsx  SceneCanvas.tsx  StakingStandalone.tsx  api.ts  index.css  main.tsx  scroll.ts  session.ts
