[package]
name = "ggrid_stake"
version = "0.1.0"
description = "GpuGrid $GGRID staking — stake $GGRID, earn the 20% fee share of every job"
edition = "2021"
# Pin to the Solana 1.18 platform-tools rustc (1.75) so the MSRV-aware resolver
# avoids both edition2024 crates AND crates needing rustc > 1.75. See .cargo/config.toml.
rust-version = "1.75"

[lib]
crate-type = ["cdylib", "lib"]
name = "ggrid_stake"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
